fix: harden collection pipeline schema initialization